--- a/AIML LAB 02.ipynb
+++ b/AIML LAB 02.ipynb
@@ -3,7 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "93a82d1b",
+   "id": "2229ec6d-b645-4f3f-9eb3-a81911c18e8d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4e803542-96c8-4d43-a1e4-d4e5b4e4f4b7",
    "metadata": {},
    "outputs": [
     {
@@ -16,9 +26,7 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
     "from queue import Queue\n",
-    "\n",
     "graph = {0: [1,3], 1: [0,2,3], 2: [1,4,5], 3: [0,1,4], 4: [2,3,5], 5: [2,4], 6: []}\n",
     "print(\"The adjacent List representing the graph is : \")\n",
     "print(graph)"
@@ -26,48 +34,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "47dc0b1d",
+   "execution_count": 8,
+   "id": "e055a09e-7ebd-4025-b115-45f83ce9af25",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5->"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'u' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 12\u001b[0m\n\u001b[0;32m     10\u001b[0m             Q\u001b[38;5;241m.\u001b[39mput(u)\n\u001b[0;32m     11\u001b[0m             visited_vertices\u001b[38;5;241m.\u001b[39mupdate({u})\n\u001b[1;32m---> 12\u001b[0m \u001b[43mbfs\u001b[49m\u001b[43m(\u001b[49m\u001b[43mgraph\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[1;32mIn[6], line 9\u001b[0m, in \u001b[0;36mbfs\u001b[1;34m(graph, source)\u001b[0m\n\u001b[0;32m      7\u001b[0m vertex \u001b[38;5;241m=\u001b[39m Q\u001b[38;5;241m.\u001b[39mget()\n\u001b[0;32m      8\u001b[0m \u001b[38;5;28mprint\u001b[39m(vertex, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m->\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m----> 9\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mu\u001b[49m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m visited_vertices:\n\u001b[0;32m     10\u001b[0m     Q\u001b[38;5;241m.\u001b[39mput(u)\n\u001b[0;32m     11\u001b[0m     visited_vertices\u001b[38;5;241m.\u001b[39mupdate({u})\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'u' is not defined"
+      "bfs traversal of graph with source o ia: \n",
+      "0-->1-->3-->2-->4-->5-->"
      ]
     }
    ],
    "source": [
-    "def bfs(graph, source):\n",
-    "    Q = Queue()\n",
-    "    visited_vertices = set()\n",
+    "def bfs(graph,source):\n",
+    "    Q=Queue()\n",
+    "    visited_vertices=set()\n",
     "    Q.put(source)\n",
     "    visited_vertices.update({0})\n",
     "    while not Q.empty():\n",
-    "        vertex = Q.get()\n",
-    "        print(vertex, end=\"->\")\n",
-    "        if u not in visited_vertices:\n",
-    "            Q.put(u)\n",
-    "            visited_vertices.update({u})"
+    "        vertex=Q.get()\n",
+    "        print(vertex,end='-->')\n",
+    "        for u in graph[vertex]:\n",
+    "            if u not in visited_vertices:\n",
+    "                Q.put(u)\n",
+    "                visited_vertices.update({u})\n",
+    "print(\"bfs traversal of graph with source o ia: \")\n",
+    "bfs(graph,0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2b86528",
+   "id": "a330990a-efb9-4aab-a9b7-1a45019ae612",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -89,7 +89,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
